--- a/recipes/couscous.html
+++ b/recipes/couscous.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Couscous</h1>
+        <img src="../img/couscous.jpg" alt="Best Couscous">
     </body>
 </html>
