Description and ingredients  added

--- a/recipes/couscous.html
+++ b/recipes/couscous.html
@@ -7,5 +7,43 @@
     <body>
         <h1>Couscous</h1>
         <img src="../img/couscous.jpg" alt="Best Couscous">
+        <h2>Description</h2>
+        <p><strong>Couscous</strong> is a North African 
+            dish of small steamed granules of rolled durum
+            wheat semolina that is traditionally served with
+            a stew spooned on top. Couscous is a staple
+            food throughout the Maghrebi cuisines of Algeria,
+            <a href="https://en.wikipedia.org/wiki/Tunisia">Tunisia</a>, 
+            Mauritania, Morocco, and Libya. The word couscous,
+            alternately cuscus or kuskus, is of Berber origin,
+            it means "well formed, well rolled, rounded".</p>
+            <p>In December 2020, Algeria, Mauritania, Morocco
+            and Tunisia obtained official recognition for the 
+            knowledge, know-how and practices pertaining to the 
+            production and consumption of couscous on the Representative
+            List of the Intangible Cultural Heritage of Humanity 
+            by UNESCO. The joint submission by the four countries 
+            was hailed as an "example of international cooperation."</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 lb lamb stew meat , cut into large pieces</li>
+            <li>6 cups couscous fine semolina (or medium)</li>
+            <li>2 onions , finely chopped</li>
+            <li>2 cloves garlic , pressed</li>
+            <li>4 tablespoons tomato paste</li>
+            <li>2 tablespoons harissa</li>
+            <li>2 tablespoons ground caraway</li>
+            <li>1 tablespoon ground coriander</li>
+            <li>1 teaspoon chili powder</li>
+            <li>4 turnips , cut in half</li>
+            <li>6 medium carrots , peeled</li>
+            <li>4 zucchini , peeled lengthwise, alternately leaving a layer of skin</li>
+            <li>6 small potatoes , peeled</li>
+            <li>10 oz. chickpeas (canned)</li>
+            <li>4 green hot peppers , fried in oil (optional)</li>
+            <li>Vegetable oil</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+        </ul>
     </body>
 </html>
