--- a/recipes/couscous.html
+++ b/recipes/couscous.html
@@ -45,5 +45,35 @@
             <li>Salt</li>
             <li>Pepper</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Add ½ cup (120ml) of oil into a large pan. 
+            Fry the onion over medium heat for 2 minutes.</li>
+            <li>Add the garlic, tomato paste and harissa 
+            and continue frying for 2 minutes.</li>
+            <li>Add the caraway, coriander, and chili powder.
+            Mix and continue cooking for another 2 minutes.</li>
+            <li>Add the lamb meat and mix well so that the 
+            pieces are covered with the sauce. Cook for 5 minutes
+            stirring regularly.</li>
+            <li>Cover with water. Add the turnips and carrots,
+            and cook on low/medium heat for 45 minutes.</li>
+            <li>Meanwhile, prepare the couscous semolina as indicated
+            on the package, with boiling water, salt, and oil.</li>
+            <li>After 45 minutes, add the zucchini, potatoes and chickpeas.</li>
+            <li>Cook for at least another 30 to 40 minutes over 
+            low to medium heat. Monitor the cooking of the vegetables.
+            If some vegetables are cooked before the meat, remove 
+            them from the pan and place them on a serving platter. 
+            Proceed in the same way with all the vegetables to prevent 
+            them from cooking too much.</li>
+            <li>10 minutes before the end of cooking, get a few ladles
+            of broth (one at a time) and wet the couscous semolina. 
+            Mix the semolina well after each ladle until it gets 
+            moistened enough.</li>
+            <li>Arrange the semolina in a tajine pot. Decorate the 
+            dish with the vegetables and the meat all around. Garnish
+            with fried green hot peppers (optional).</li>
+        </ol>
     </body>
 </html>
