ingredients and steps added

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -14,10 +14,47 @@
         similar to Italian <em>mezzi tubetti lisci</em>. However,
         the pasta may take another shape, as shown in the photo above, 
         called "<em>ressor</em>", which the french word for spring.</p>
-        <p>If you've ever been in Tunisia, you'll know 
-        2 things about Tunisians. They love their food spicy
+        <p>If you've ever been in <a href="https://www.discovertunisia.com/en/">
+        Tunisia</a>, you'll know 2 things about Tunisians. They love their food spicy
         hot and they love their <strong>pasta</strong>! In fact, after Italians
-        they're the second consumer of pasta in the world, 
-        consuming a whopping 12 kg per person a year!</p>
+        they're the second consumer of pasta in the world, consuming a whopping 
+        12 kg per person a year!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>500g -1lb pasta of your choice</li>
+            <li>350g - 12oz beef, cubed</li>
+            <li>1 large onion, diced</li>
+            <li>3 TBS tomato paste</li>
+            <li>Harissa (to taste)</li>
+            <li>3 bay leaves</li>
+            <li>handful of precooked chickpeas (optional)</li>
+            <li>4 cloves of garlic, minced</li>
+            <li>1 hot green chilli (optional)</li>
+            <li>2 tsp sweet paprika</li>
+            <li>1 tsp ground cumi</li>
+            <li>1/2tsp ground craway</li>
+            <li>1/4 tsp ground ginger</li>
+            <li>1/2 tsp dried mint</li>
+            <li>1 tsp dried basil</li>
+            <li>salt, black pepper, olive oil</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>In a frying pan or large saucepan, heat the oil. 
+            Add the spices and bay leaf. Brown for a few minutes 
+            while stirring.</li>
+            <li>Then the meat to brown. Once browned add the onions 
+            and garlic. always over medium heat, stirring.</li>
+            <li>Lower the heat and add the tomato concentrate, 
+            and half liter/half qt of water.</li>
+            <li>Cover and cook for about 1 hour or until the 
+            meat is tender.</li>
+            <li>Once the meat is cooked, add in the precooked chickpeas 
+            (if using) and the pasta. You should have enough water to 
+            cover the pasta. Cook the pasta in the sauce for about 10 
+            minutes for al-dente or 12 minutes for well-done. </li>
+            <li>Spoon into bowls and garnish with black olives, 
+            if you like.</li>
+        </ol>
     </body>
 </html>
