--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/couscous.html">Couscous</a></li>
             <li><a href="recipes/pasta.html">Makroona bel sansa</a></li>
+            <li><a href="recipes/tagine.html">Tagine</a></li>
         </ul>
     </body>
 </html>
