image and description added

--- a/recipes/tagine.html
+++ b/recipes/tagine.html
@@ -6,5 +6,23 @@
     </head>
     <body>
         <h1>Tagine</h1>
+        <img src="../img/tagine.jpg" alt="tunisian tagine">
+        <h2>Description</h2>
+        <p>The Tunisian tagine is not an ordinary egg dish, 
+        it is very flavorful with distinct and heady blend 
+        of North African spices; just what you need to wake 
+        your taste buds up.</p>
+        <p>When people hear tagine, the thing that comes to 
+        mind is the Moroccan dish cooked in a clay pot with 
+        domed lid, but the Tunisian tagine locally known as 
+        “<em>tajin sibnekh</em>” is totally different. It is 
+        an egg dish baked with potatoes, meat, cheese, vegetables, 
+        herbs and North African spices, similar to an Italian 
+        frittata or Spanish tortilla.</p>
+        <p>It is usually served as a starter in the region, 
+        but it can serve as a complete meal, as it is filling 
+        and quite nutritious too. The Tunisian frittata is 
+        rich protein and carbohydrates as well as vitamins 
+        and minerals from the additional vegetables and herbs.</p>
     </body>
 </html>
