ingredients and steps added

--- a/recipes/tagine.html
+++ b/recipes/tagine.html
@@ -24,5 +24,43 @@
         and quite nutritious too. The Tunisian frittata is 
         rich protein and carbohydrates as well as vitamins 
         and minerals from the additional vegetables and herbs.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 tablespoons Oil</li>
+            <li>2 Potatoes peeled and cubed</li>
+            <li>1 cup Chopped onions</li>
+            <li>1 teaspoon Ras el hanout spice mix</li>
+            <li>1 teaspoon Paprika</li>
+            <li>1 large Chicken breast diced</li>
+            <li>½ cup Green peas</li>
+            <li>½ teaspoon Pepper flakes</li>
+            <li>6 Eggs beaten</li>
+            <li>25 g Grated cheddar cheese optional</li>
+            <li>Coriander a few stalks, chopped</li>
+            <li>Salt to taste</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Pre-heat oven to 170 degrees and 
+            grease the baking dish.</li>
+            <li>Heat the oil in a pan and fry the potato 
+            cubes until almost cooked.</li>
+            <li>Add the onions into the pan and cook 
+            until translucent.</li>
+            <li>Add the ras el hanout and paprika.</li>
+            <li>Pour the diced chicken, some salt and peas 
+            into the pan, and allow to cook for a few minutes, 
+            then remove from heat and allow to cool.</li>
+            <li>Beat the eggs in a large mixing bowl with 
+            the grated cheddar cheese, pepper flakes and coriander. 
+            Stir in the chicken and potato mixture; taste and 
+            add some salt to taste if required.</li>
+            <li>Pour the content of the mixing bowl 
+            into the greased baking dish.</li>
+            <li>Place inside the oven and allow to cook until 
+            the centre is set; and the top has a golden-brown 
+            appearance. This should take 30-40 mins.</li>
+            <li>Remove from the oven and serve.</li>
+        </ol>
     </body>
 </html>
